--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.github.brokenithm"
-        minSdkVersion 17
-        targetSdkVersion 30
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 10300
         versionName "1.3.0"
 
@@ -47,4 +47,10 @@ dependencies {
 //    implementation 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     implementation 'com.github.cachapa:ExpandableLayout:2.9.2'
     implementation 'androidx.preference:preference-ktx:1.1.1'
+
+    def camerax_version = "1.1.0"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
 }
