--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.NFC"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
 
     <application
         android:name=".BrokenithmApplication"
@@ -15,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Brokenithm">
         <activity android:name=".activity.MainActivity"
+            android:exported="true"
             android:screenOrientation="landscape"
             android:configChanges="uiMode|orientation">
             <meta-data android:name="android.nfc.action.TECH_DISCOVERED" android:resource="@xml/nfc_tech_filters" />
