--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.github.brokenithm"
+        applicationId "com.github.brokenithm.hands"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 10000
